<resources>
    <string name="app_name">MobileShop</string>

    <string name="search">Search</string>
    <string name="itemName">Mobile Phone Cover</string>
    <string name="itemPrice">Item Price</string>
    <string name="itemPrice2">Rs 320.00</string>
    <string name="itemOrderedDate">Order Date</string>
    <string name="itemOrderedDate2">21/08/2019</string>
    <string name="confirmOrderReceived">Confirm Order Received</string>
    <string name="refundRequest">Request Refund</string>
    <string name="updateButton">update</string>
    <string name="submitButton">SUBMIT</string>
    <string name="deleteButton">Delete</string>
    <string name="itemID">itemID</string>
    <string name="reason">Reason</string>
    <string name="reasonHint">Enter the Reason</string>
    <string name="description">Description</string>
    <string name="descriptionHint">Enter the Description</string>
    <string name="type">Type</string>
    <string name="radio1">Full Refund</string>
    <string name="radio2">Partial Refund</string>
    <string name="amountHint">Enter the Amount</string>
    <string name="maxAmount">Maximum amount is : Rs52.50</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="mobileNumberHint">Enter a Mobile Number</string>
    <string name="Note">Please enter a working mobile number.Admin will contact you throught this number</string>
    <string name="refundReason">Item Damaged</string>
    <string name="refundDescription">When the package receive it was damaged</string>
    <string name="statusH">Refund Status</string>
    <string name="statusN">Waiting for refund</string>
    <string name="adminNote">Admin Note</string>
    <string name="adminNote2">None</string>
    <string name="title_activity_view_refund_details">viewRefundDetails</string>



    <string name="cname">Name</string>
    <string name="cadline1">Address Line 1</string>
    <string name="cadline2">Address Line 2</string>
    <string name="cpcode">Postale Code</string>
    <string name="cNIC">NIC</string>
    <string name="ccno">Contact Number</string>
    <string name="cemail">Email</string>
    <string name="comsg">Optional Message</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnReset">Reset</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>



    <string name="panasonic">Panasonic Lumix LX10</string>
    <string name="camera_price">LKR 25,200.00</string>
    <string name="camera_info">Travel Item Description</string>
    <string name="camara_des">The Panasonic Lumix DMC-LX10 (LX15 in some markets) is a 20MP large-sensor compact with a bright (F1.4-2.8), 24-72mm equivalent zoom lens. Which is to say, its a very capable pocket camera. And, being a Panasonic, it has video specs and clever video-based features to back up its stills capabilities.</string>

    <string name="budgetmanager">Budget Manager</string>
    <string name="budgettransportation">Transportation</string>
    <string name="budgethotelsandrestaurant">Hotels and Restaurant</string>
    <string name="budgetbillsandtickets">Bills and Tickets</string>
    <string name="budgetfoodandbavarage">Food and Bavarage</string>
    <string name="budgetother">Other</string>
    <string name="budgettotal">Total</string>
    <string name="budgetrs">Rs.</string>
    <string name="searchhere">Search here</string>
    <string name="travelitemscart">Cart</string>
    <string name="travelItems">Travel Items</string>
    <string name="travelitemsitemName">Item Name</string>
    <string name="travelitemsitemPrice">Item Price</string>
    <string name="travelitemsitemNo">Item No</string>
    <string name="travelitemsupdate">UPDATE</string>
    <string name="travelItemsTelNo">Mobile No</string>
    <string name="travelItemsQuantity">Quantity</string>
    <string name="travelItemsCall">CALL</string>
    <string name="budgetAdd">ADD</string>
    <string name="budgetDelete">DELETE</string>
    <string name="budgetUpdate">UPDATE</string>
    <string name="tripname">Trip Name</string>
    <string name="itemDescription">Description</string>
    <string name="travelaIItem">ALL ITEMS</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="itemlist">Item List</string>
    <string name="addingitems">Added Item</string>
    <string name="call">Call</string>
</resources>
